# mailing_service

./: .editorconfig  .env.example  Makefile  README.md  conftest.py  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py
mailing/: admin.py  models.py  tasks.py
mailing/fixtures/: clients.json  messages.json
mailing/migrations/: 0001_initial.py  0002_mailing_last_run_at_mailing_next_run_at.py
mailing/tests/: test_models.py  test_tasks.py  utils.py
